fixes bug 323708 "Recalculation of ComputeFreshnessLife wrong after performing If-Modified-Since / If-None-Match request" patch by mozilla@com.jkkn.dk r=biesi sr=darin